# TestCaseAI

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  compliance_mapper.py  config.py  docker.env.template  document_parser.py  env_template.txt  examples.py  main.py  models.py  pyproject.toml  quality_validator.py  requirement_extractor.py  run.py  session_memory.py  test_generator.py
docs/: SETUP.md  SYSTEM_SUMMARY.md
examples/: basic_usage.py
scripts/: agent_flow.py
src/testcaseaiagent/: __init__.py  main.py
src/testcaseaiagent/core/: __init__.py  config.py
src/testcaseaiagent/models/: __init__.py  base.py
src/testcaseaiagent/services/: __init__.py  compliance_mapper.py  document_parser.py  quality_validator.py  requirement_extractor.py  session_memory.py  test_generator.py
src/testcaseaiagent/utils/: __init__.py
src/testcaseaiagent/workflows/: __init__.py  main_workflow.py
