[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testcaseaiagent"
version = "0.1.0"
description = "AI-powered healthcare test case generation system using LangGraph and Gemini"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-core>=0.3.76",
    "langchain-google-genai>=2.1.12",
    "langgraph>=0.6.7",
    "pydantic>=2.11.uv lock check9",
    "tavily-python>=0.7.12",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "xmltodict>=0.14.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "python-multipart>=0.0.6",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic-settings>=2.1.0",
    "structlog>=23.2.0",
    "tenacity>=8.2.0",
    "openpyxl>=3.1.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "spacy>=3.7.0",
    "nltk>=3.8.0",
    "regex>=2023.10.0",
    "jsonschema>=4.20.0",
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "pyyaml>=6.0.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "pyppeteer>=2.0.0",
    "ipython>=9.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
testcaseaiagent = ["*.json", "*.yaml", "*.yml"]
